--- a/package.json
+++ b/package.json
@@ -1,15 +1,30 @@
 {
-  "name": "kiket-mcp-server",
+  "name": "@kiket-dev/mcp-server",
   "version": "0.1.0",
   "description": "Model Context Protocol server that provides Kiket issue management tools.",
   "type": "module",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "start": "node --loader ts-node/esm src/server.ts",
     "dev": "npm run start",
     "lint": "eslint \"src/**/*.ts\"",
-    "test": "vitest"
+    "test": "vitest",
+    "prepare": "npm run build"
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "mcp.json"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kiket-dev/kiket.git",
+    "directory": "mcp-server"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
     "axios": "^1.6.8",
