--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,12 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "declaration": true,
+    "declarationMap": true
   },
-  "include": ["src/**/*", "test/**/*"],
+  "include": ["src/**/*"],
+  "exclude": ["test/**/*"],
   "ts-node": {
     "esm": true
   }
