Fix publish workflow tag version extraction
The tag pattern is 'kiket-mcp-server-v*' but the version extraction
was trying to strip 'refs/tags/mcp-v', causing a mismatch.

Changes:
- Update version extraction to strip correct prefix: kiket-mcp-server-v
- Fix tag_name in GitHub release to use correct format

This resolves the version mismatch error:
'Version mismatch: package.json has 0.1.0 but tag is refs/tags/kiket-mcp-server-v0.1.0'

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Extract version from tag
         id: version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/mcp-v}" >> $GITHUB_OUTPUT
+        run: echo "VERSION=${GITHUB_REF#refs/tags/kiket-mcp-server-v}" >> $GITHUB_OUTPUT
 
       - name: Verify package.json version matches tag
         run: |
@@ -56,7 +56,7 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: mcp-v${{ steps.version.outputs.VERSION }}
+          tag_name: kiket-mcp-server-v${{ steps.version.outputs.VERSION }}
           name: MCP Server v${{ steps.version.outputs.VERSION }}
           body: |
             Release of @kiket-dev/kiket-mcp-server version ${{ steps.version.outputs.VERSION }}
